<!-- @author Berenton -->
<resources>
    <string name="app_name">Quarantine Tracker</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="Title">Title</string>
    <string name="Place">Place</string>
    <string name="Assessment">Likelihood\nof contagion</string>
    <string name="People">People</string>
    <string name="Misc">Misc</string>

    <string name="Tutorial">
        You can navigate between different views by using the navigation bar in the top left corner of the screen.\n
        \n
        You can enter a new report in the New Report screen. The program will remember your inputs and will suggest them when you go to enter new reports.\n
        After you save the report, it is added to the database and will be stored on your device.\n
        \n
        In the Archive screen you can find all the reports you have entered in chronological order.\n
        \n
        In the Calendar screen you can press on a date and see all the reports from that specific date.\n
        \n
        Stay healthy and stay home :)
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView">TextView</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="data">Data</string>
    <string name="refresh">Refresh</string>
    <string name="save_report">Save Report</string>
    <string name="new_option">New Option</string>
    <string name="dot">.</string>
    <string name="space" />
    <string name="dot2">:</string>
    <string name="add_option">Add Option</string>
    <string name="welcome_to_quarantine_tracker">Welcome to Quarantine Tracker!</string>
</resources>
